@@ -8,7 +8,9 @@ Improvements:
 
  - F5 also refreshes the current view.
  - Allow line graphics to be disabled with new line-graphics option.
- - Also include the reference names when searching.
+ - Main view: also include the reference names when searching.
+ - Stage view: add stage-next action to jump to next diff chunk that can be
+   staged. By default bound to '@'.
  - Configure: check for the ncurses header files.
 
 Bug fixes:
